[package]
name = "recall-ai"
version = "0.1.0"
edition = "2021"
description = "Search every AI conversation you've ever had, locally. Rust CLI + SQLite FTS5 index for ChatGPT / Claude / Claude Code / Codex CLI."
license = "MIT OR Apache-2.0"
repository = "https://github.com/kezhu-ai/recall-ai"
keywords = ["ai", "cli", "search", "history", "chatgpt", "claude", "codex", "rust"]
categories = ["command-line-utilities", "text-processing", "database"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
dirs = "5"
regex = "1"
memmap2 = "0.9"
tabled = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
tempdir = "0.3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[[bin]]
name = "recall"
path = "src/main.rs"